--- a/src/index.css
+++ b/src/index.css
@@ -1,44 +1,321 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.input:checked + span{
-  text-decoration: line-through;
+.input:checked + span {
+    text-decoration: line-through;
 }
 
 .lds-hourglass {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
 }
+
 .lds-hourglass:after {
-  content: " ";
-  display: block;
-  border-radius: 50%;
-  width: 0;
-  height: 0;
-  margin: 8px;
-  box-sizing: border-box;
-  border: 32px solid #cef;
-  border-color: #cef transparent #cef transparent;
-  animation: lds-hourglass 1.2s infinite;
+    content: " ";
+    display: block;
+    border-radius: 50%;
+    width: 0;
+    height: 0;
+    margin: 8px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 32px solid #cef;
+    border-color: #cef transparent #cef transparent;
+    -webkit-animation: lds-hourglass 1.2s infinite;
+    animation: lds-hourglass 1.2s infinite;
 }
+
+@-webkit-keyframes lds-hourglass {
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+        -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+        -webkit-transform: rotate(900deg);
+        transform: rotate(900deg);
+        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    100% {
+        -webkit-transform: rotate(1800deg);
+        transform: rotate(1800deg);
+    }
+}
+
 @keyframes lds-hourglass {
-  0% {
-    transform: rotate(0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  }
-  50% {
-    transform: rotate(900deg);
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  100% {
-    transform: rotate(1800deg);
-  }
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+        -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+    50% {
+        -webkit-transform: rotate(900deg);
+        transform: rotate(900deg);
+        -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+    100% {
+        -webkit-transform: rotate(1800deg);
+        transform: rotate(1800deg);
+    }
+}
+
+
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+html, body {
+    background: #f7f1f1;
+    font-size: 1.1rem;
+    font-family: 'Quicksand', sans-serif;
+}
+
+@-webkit-keyframes strikeitem {
+    to {
+        width: calc(100% + 1rem);
+    }
+}
+
+@keyframes strikeitem {
+    to {
+        width: calc(100% + 1rem);
+    }
+}
+
+.wrapper {
+    min-height: 80vh;
+    margin: 4rem auto;
+    padding: 2rem 3rem 3rem;
+    width: 50%;
+    max-width: 1000px;
+    background: #ff6666;
+    color: #fff;
+    -webkit-box-shadow: -20px -20px 0 0 rgba(100, 100, 100, .1);
+    box-shadow: -20px -20px 0 0 rgba(100, 100, 100, .1);
+}
+
+h1 {
+    /*text-align:center;*/
+    font-weight: normal;
+    font-size: 2.6rem;
+    letter-spacing: 0.05em;
+    border-bottom: 1px solid rgba(255, 255, 255, .3);
+}
+
+/*#todolist h1 span {*/
+/*    display:block;*/
+/*    font-size:0.8rem;*/
+/*    margin-bottom:0.7rem;*/
+/*    margin-left:3px;*/
+/*    margin-top:0.2rem;*/
+/*}*/
+
+/*#todolist .emptylist {*/
+/*    margin-top:2.6rem;*/
+/*    text-align:center;*/
+/*    letter-spacing:.05em;*/
+/*    font-style:italic;*/
+/*    opacity:0.8;*/
+/*}*/
+ul {
+    margin-top: 2.6rem;
+    list-style: none;
+}
+
+/*#todolist .todolist-move {*/
+/*    transition: transform 1s;*/
+/*}*/
+li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 -3rem 4px;
+    padding: 1.1rem 3rem;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+li.done {
+    text-decoration: line-through;
+}
+
+label {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#todolist .actions {
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    padding-left: 0.7em;
+}
+
+#todolist .label {
+    position: relative;
+    -webkit-transition: opacity .2s linear;
+    -o-transition: opacity .2s linear;
+    transition: opacity .2s linear;
+}
+
+#todolist .done .label {
+    opacity: .6;
+}
+
+#todolist .done .label:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: -.5rem;
+    display: block;
+    width: 0%;
+    height: 1px;
+    background: #FFF;
+    -webkit-animation: strikeitem .3s ease-out 0s forwards;
+    animation: strikeitem .3s ease-out 0s forwards;
+}
+
+.del {
+    justify-self: flex-end;
+    border: none;
+    background: #fff;
+    -webkit-appearance: none;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+}
+
+
+/* FORM */
+form {
+    margin-top: 3rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+/*label {*/
+/*    min-width:100%;*/
+/*    margin-bottom:.5rem;*/
+/*    font-size:1.3rem;*/
+/*}*/
+form input {
+    padding: 10px;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    border: none;
+    background: #f7f1f1;
+    font-size: initial;
+    border: 0;
+}
+
+form button {
+    padding: 15px;
+    background: #FF6666;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 1px solid rgba(255, 255, 255, .3);
+    margin-left: 5px;
+    cursor: pointer;
+    -webkit-transition: background .2s ease-out;
+    -o-transition: background .2s ease-out;
+    transition: background .2s ease-out;
+    -webkit-box-shadow: 0 0 1px 0.5px #fff;
+    box-shadow: 0 0 1px 0.5px #fff;
+}
+
+form button:hover {
+    background: #FF5E5E;
+}
+
+
+/* TOOGLE COMPONENT */
+.togglebutton-wrapper {
+    margin-top: 1em;
+}
+
+.togglebutton-wrapper label {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.togglebutton-wrapper input {
+    position: absolute;
+    left: -9999px;
+}
+
+.togglebutton-wrapper .togglebutton-label {
+    font-size: .8rem;
+    letter-spacing: .1em
+}
+
+.togglebutton-wrapper .tooglebutton-box {
+    position: relative;
+    display: block;
+    margin-left: 0.6em;
+    width: 38px;
+    height: 22px;
+    background: white;
+    /*border:1px solid black;*/
+    border-radius: 999px;
+    cursor: pointer;
+}
+
+.togglebutton-wrapper .tooglebutton-box:before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    display: block;
+    width: 18px;
+    height: 18px;
+    /*border:1px solid #FF6666;*/
+    border-radius: 50%;
+    background: #FF6666;
+    opacity: 0.7;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+.togglebutton-wrapper.togglebutton-focus .tooglebutton-box {
+    -webkit-box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 0px 3px rgba(0, 0, 0, 0.1);
+}
+
+.togglebutton-wrapper.togglebutton-checked .tooglebutton-box:before {
+    left: calc(100% - 4px - 16px);
+    opacity: 1;
 }
